/********************************************************************************
 * Copyright (c) 2023 Contributors to the Eclipse Foundation
 *
 * See the NOTICE file(s) distributed with this work for additional
 * information regarding copyright ownership.
 *
 * This program and the accompanying materials are made available under the
 * terms of the Apache License, Version 2.0 which is available at
 * https://www.apache.org/licenses/LICENSE-2.0.
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations
 * under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 ********************************************************************************/
// should be mapped into
export type SemanticModel = {

}

export type AsBuiltAspectModel = {
  partId: string;
  customerPartId: string;
  nameAtCustomer: string;
  manufacturingDate: string;
  manufacturingCountry: string;
}

export type AsPlannedAspectModel = {
  validityPeriodFrom: string;
  validityPeriodTo: string;
}

export type PartSiteInformationAsPlanned = {
  functionValidFrom: string,
  functionValidUntil: string
}

export type TractionBatteryCode = {
  uuid4: string,
  productType: string,
  tractionBatteryCode: string,
  subComponents: TractionBatteryCode[]
}



