@startuml

title: Domain Model


abstract Asset {
        *   id : String
        owner : Owner
        activeAlert: boolean
        qualityType : QualityType
        underInvestigation : boolean
        semanticDataModelType : SemanticDataModelType
        childRelations : List<Relation>
        parentRelations : List<Relation>

        idShort : String
        van : String

        manufacturerPartId : String /' partTypeInformation.manufacturerPartId '/
        nameAtManufacturer : String /' partTypeInformation.nameAtManufacturer '/
        classification : String /' partTypeInformation.classification '/
        businessPartner : String /' BusinessPartner '/

        detailSemanticModels : List<DetailAspectModelModel>
}

note left
    Rename Descriptions to Relation
end note


abstract DetailAspectModelModel {
    detailSemanticDataModelType : DetailSemanticDataModelType
}
note left
    DetailAspectModelModel contains detail semantic models
end note


class Relation {
       *   id : String
       idShort : String
}

enum SemanticDataModelType {
    BATCH,
    SERIALPART,
    JUSTINSEQUENCEPART,
    PARTASPLANNED
}


enum DetailSemanticDataModelType {
    TRACTIONBATTERYCODE,
    PARTSITEINFORMATIONASPLANNED
}

class AsBuiltAspectModel {
    partId : String /' BatchID ,  jisNumber , partInstanceID'/

    /' specific customer attribute for asBuilt '/
    customerPartId : String
    nameAtCustomer : String
    manufacturingCountry : String (iso-3)
    manufacturingDate : Instant
}

note left
    partId covers SerialPart.partInstanceID, Batch.BatchID, JustInSequencePart.jisNumber
end note

class TractionBatteryCode {
    * uuid4 : String /' UUID ID '/
    productType: String
    tractionBatteryCode: String
    subComponents : List<TractionBatteryCode>
}

class  AsPlannedAspectModel { /' PartAsPlanned '/
/'
    1.0.0
'/
    validityPeriodFrom : Instance
    validityPeriodTo: Instance
}

class PartSiteInformationAsPlanned {
/'
    1.0.0
    Currently this is not ready for implementing - there is no specification right now.
'/
    functionValidFrom : Instance
    functionValidUntil : Instance

}


SemanticDataModelType <-- Asset
DetailSemanticDataModelType <-- DetailAspectModelModel
Asset <|.. AsBuiltAspectModel
Asset <|.. AsPlannedAspectModel

Asset }o-- Relation : childRelations
Asset }o--  Relation : parentRelations
Asset }o- DetailAspectModelModel : detailAspectModels
DetailAspectModelModel  <|.. TractionBatteryCode
DetailAspectModelModel  <|..  PartSiteInformationAsPlanned
@enduml
